# discontinuous-galerkin

./: .flake8  .gitattributes  .gitignore  404.html  LICENSE.txt  README.md  index.html  main.py  main_burgers.py  main_euler.py  main_multiphase_leak.py  main_multiphase_pipeflow.py  main_multiphase_pipeflow_primitive.py  main_pipe_network.py  main_pipeflow.py  mkdocs.yml  pyproject.toml  three_body.py
.github/workflows/: CI.yml  build_docs.yml
configs/: pipe_network.yml
docs/: index.md
main_scripts/: main.py  main_multiphase_leak.py  main_multiphase_pipeflow_primitive.py  main_pipeflow.py
notebooks/: advection_example.ipynb
search/: search_index.json
src/discontinuous_galerkin/: base_model.py  factories.py  steady_state.py
src/discontinuous_galerkin/base/: base_boundary_conditions.py  base_model.py  base_numerical_flux.py  base_stabilizer.py  base_time_integrator.py
src/discontinuous_galerkin/boundary_conditions/: boundary_conditions.py  characteristic_dirichlet_boundary_conditions.py  dirichlet_boundary_conditions.py
src/discontinuous_galerkin/network/: pipe_network.py  single_pipe.py
src/discontinuous_galerkin/nonlinear_solvers/: newton.py
src/discontinuous_galerkin/numerical_fluxes/: base_numerical_flux.py  lax_friedrichs.py  numerical_flux.py  roe.py
src/discontinuous_galerkin/polynomials/: jacobi_polynomials.py
src/discontinuous_galerkin/stabilizers/: artificial_viscosity.py  base_stabilizer.py  filters.py  slope_limiters.py  stabilizer.py
src/discontinuous_galerkin/start_up_routines/: start_up_1D.py
src/discontinuous_galerkin/time_integrators/: BDF2.py  CFL.py  SSPRK.py  implicit_euler.py  time_integrator.py
tests/: test_main.py  test_new.py
