[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discontinuous-galerkin"
version = "0.1.0"
license = {file = "LICENSE.txt"}
description = "A generic discontinuous galerkin package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib ~= 3.6.2",
    "numpy ~= 1.23.5"
]

[project.urls]
"Homepage" = "https://github.com/nmucke/discontinuous-galerkin"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src]
omit = ["*/__init__.py"]
