[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discontinuous-galerkin"
version = "0.1.0"
license = {file = "LICENSE.txt"}
description = "A generic discontinuous galerkin package"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "tqdm >= 4.64.1",
    "numpy >= 1.23.5",
    "scipy >= 1.10.0",
    "matplotlib >= 3.6.3",
]

[project.urls]
"Homepage" = "https://github.com/nmucke/discontinuous-galerkin"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src/discontinuous_galerkin"]
omit = ["*/__init__.py"]
